--- a/templates/index.html
+++ b/templates/index.html
@@ -23,13 +23,18 @@
                 <a href="#slide3"></a>
             </div> <!-- End slider-nav -->
         </div> <!-- End slider-wrap -->
+
+        <div id="container_glass_box">
+          <h1>DO YOU KNOW YOUR <span style="color: #1DB954;">SPOTIFY</span> SONGS?</h1>
+      </div>
+
     </div> <!-- End carrousel -->
 
-    <div id="container_glass_box">
-        <h1>DO YOU KNOW YOUR <span style="color: #1DB954;">SPOTIFY</span> SONGS?</h1>
+
+    <div id="wrapper_titleDescription">
+      <h1 id="main_title"> Can you find the <span id="blur_text"><del>missing</del></span> lyrics 🎵</h1>
+      <p id="game_description">Listen to your favorite Spotify tracks, but when the lyrics cut out, can you guess the next words? Who will be the ultimate Music Master?! 🎤</p>
     </div>
-    
-    <h1 id="main_title">FIND THE <span id="blur_text"><del>MISSING</del></span> LYRICS</h1>
 
     <hr>
 
